@@ -1,3 +1,5 @@
+- identify default target better
+
 2.003 2020-11-01
 - optional new param InDir to be "current dir"
 
